feat(InputView): 자동차 이름 입력 뷰 예외 처리 구현